css/main.css
body {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 90px auto 90px;
}
header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: space-between;
  background: linear-gradient(to top, tomato, rgb(236, 125, 105));
  text-align: center;
  border-bottom: 1px solid gray;
}
#links {
  display: flex;
  flex-direction: column;
}
#headline {
  justify-self: center;
  align-self: center;
}
footer {
  background-color: antiquewhite;
  /* background: linear-gradient(to bottom, tomato, rgb(236, 125, 105));
  border-top: 1px solid gray; */
}
#main {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto auto;
  background-color: antiquewhite;
  min-height: 80vh;
}
.main-item {
  margin: 5px;
  margin-left: 20vw;
  margin-right: 20vw;
}
#timer {
  font-size: 30px;
}
#text-field {
  width: auto;
  min-height: 300px;
  font-size: 25px;
  border-radius: 1rem;
  border: 1px solid gray;
  background-color: white;
  text-align: center;
  margin-left: 20vw;
  margin-right: 20vw;
}
#statistics {
  background-color: white;
  display: none;
  min-height: 500px;
  border-radius: 1rem;
  border: 1px solid gray;
}
#wpm-statistics,
#accuracy-statistics {
  margin: 10px;
  border: 1px solid gray;
  border-radius: 1rem;
}
#reset {
  margin: 10px;
}
canvas {
  width: 500px;
  height: 400px;
}
button {
  border-radius: 1rem;
  min-height: 30px;
  min-width: 45px;
}
#toggles {
  justify-content: center;
  align-content: center;
}
#toggles img {
  max-width: 15px;
  max-height: 15px;
}
@keyframes color-change {
  0% {
    background-color: rgb(152, 150, 150);
  }
  50% {
    background-color: rgb(201, 200, 200);
  }
  100% {
    background-color: rgb(152, 150, 150);
  }
}
.current-word {
  background-color: rgb(218, 218, 218);
}
.correct {
  background-color: rgb(171, 213, 171);
}
.incorrect {
  background-color: rgb(219, 144, 144);
}
.current {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  animation: color-change 2s ease-in-out infinite;
}
#hidden-input {
  opacity: 0;
  position: absolute;
  left: -9999px;
}

